{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 223,
  "lineage": "10014be9-e3d3-8a45-4ed7-2476b6076727",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0325e3016099f9112",
            "arn": "arn:aws:ec2:ap-south-1:653727541039:instance/i-05df0a189f1b764a2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05df0a189f1b764a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ebb282d897e282b",
            "private_dns": "ip-192-168-1-107.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f84e42c88f2ef0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d066503e689796b9",
            "tags": {
              "App": "corp_api",
              "Name": "ec2-dev-api-ap-south-1c",
              "Owner": "api_mgmt_dev"
            },
            "tags_all": {
              "App": "corp_api",
              "Name": "ec2-dev-api-ap-south-1c",
              "Owner": "api_mgmt_dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3d914e9a69bdf57"
            ]
          },
          "dependencies": [
            "aws_subnet.karthick-subnet-1",
            "aws_vpc.terraform",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:internet-gateway/igw-008c6d8c128f2c8e6",
            "id": "igw-008c6d8c128f2c8e6",
            "owner_id": "653727541039",
            "tags": {
              "Name": "karthick-igw"
            },
            "tags_all": {
              "Name": "karthick-igw"
            },
            "vpc_id": "vpc-0e88674a66fb5107c"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:route-table/rtb-05ea6f1c470e0bd1f",
            "id": "rtb-05ea6f1c470e0bd1f",
            "owner_id": "653727541039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008c6d8c128f2c8e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Public-Route-Table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e88674a66fb5107c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c11362378c0b0555",
            "route_table_id": "rtb-05ea6f1c470e0bd1f",
            "subnet_id": "subnet-0d066503e689796b9"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.karthick-subnet-1",
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8280846aa476fc5",
            "route_table_id": "rtb-05ea6f1c470e0bd1f",
            "subnet_id": "subnet-0d68842d638c68a36"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.karthick-subnet-2",
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c9b0144df46acb9",
            "route_table_id": "rtb-05ea6f1c470e0bd1f",
            "subnet_id": "subnet-0c51a9c754a5679d6"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.karthick-subnet-3",
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:security-group/sg-05a455a5f54f6983f",
            "description": "Allow HTTPS inbound traffic",
            "egress": [],
            "id": "sg-05a455a5f54f6983f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": "",
            "owner_id": "653727541039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e88674a66fb5107c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "karthick-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:subnet/subnet-0d066503e689796b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d066503e689796b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653727541039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karthick-subnet-1"
            },
            "tags_all": {
              "Name": "karthick-subnet-1"
            },
            "vpc_id": "vpc-0e88674a66fb5107c"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "karthick-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:subnet/subnet-0d68842d638c68a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68842d638c68a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653727541039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karthick-subnet-2"
            },
            "tags_all": {
              "Name": "karthick-subnet-2"
            },
            "vpc_id": "vpc-0e88674a66fb5107c"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "karthick-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:subnet/subnet-0c51a9c754a5679d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c51a9c754a5679d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653727541039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karthick-subnet-3"
            },
            "tags_all": {
              "Name": "karthick-subnet-3"
            },
            "vpc_id": "vpc-0e88674a66fb5107c"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:653727541039:vpc/vpc-0e88674a66fb5107c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0259709cfcbb2f58f",
            "default_route_table_id": "rtb-00996c0235f2294f8",
            "default_security_group_id": "sg-0d3d914e9a69bdf57",
            "dhcp_options_id": "dopt-014f7d1eafe4e0534",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e88674a66fb5107c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00996c0235f2294f8",
            "owner_id": "653727541039",
            "tags": {
              "AZ": "ap-south-1a",
              "Environment": "DEV",
              "Name": "karthick-vpc",
              "Region": "ap-south-1"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Environment": "DEV",
              "Name": "karthick-vpc",
              "Region": "ap-south-1"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}